--- a/public/MyCSS/Style.css
+++ b/public/MyCSS/Style.css
@@ -6,6 +6,14 @@ body{
     border: 1px solid rgba(21,72,116,0.5);
 }
 
+.bg-cart{
+    background-color: rgba(63, 63, 63, 0.1);
+}
+
+#group-itens-clientes li{
+    width: 200px;
+}
+
 .list-group-clientes li{
     display: inline-block;
     margin-bottom: 15px;
