--- a/public/MyCSS/Style.css
+++ b/public/MyCSS/Style.css
@@ -6,6 +6,14 @@ body{
     border: 1px solid rgba(21,72,116,0.5);
 }
 
+.btns-card-prod{
+    display: inline-flex;
+}
+
+.btns-card-prod button:last-child{
+    margin-left: 10px;
+}
+
 .bg-cart{
     background-color: rgba(63, 63, 63, 0.1);
 }
