--- a/public/MyCSS/Style.css
+++ b/public/MyCSS/Style.css
@@ -2,20 +2,28 @@ body{
     background-color: rgba(0, 0, 0, 0.1);
 }
 
+.dados-cart-topo{
+    padding-bottom: 15px;
+    padding-top: 15px;
+
+    border-bottom: 1px solid #3d3d3d;
+}
+
+.txt-cart-null p{
+    font-size: 25px;
+    color: #154874;
+    font-weight: 600;
+    text-transform: uppercase;
+    padding-top: 15px;
+}
+
 .painel-hover:hover{
     border: 1px solid rgba(21,72,116,0.5);
 }
 
-.btns-card-prod{
-    display: inline-flex;
-}
-
-.btns-card-prod button:last-child{
-    margin-left: 10px;
-}
-
 .bg-cart{
     background-color: rgba(63, 63, 63, 0.1);
+    border-radius: 15px;
 }
 
 #group-itens-clientes li{
