--- a/public/MyCSS/Style.css
+++ b/public/MyCSS/Style.css
@@ -9,6 +9,14 @@ body{
     border-bottom: 1px solid #3d3d3d;
 }
 
+.product-count{
+    color: #FFF;
+    background-color: #154874;
+    position: absolute;
+    right: 21px;
+    top: 10px;
+}
+
 .size-card-procuct-cart{
     text-align: center;
     height: 90px;
